fix project boxes overflowing into the padding of the parent

--- a/web/src/styles/new.css
+++ b/web/src/styles/new.css
@@ -163,7 +163,6 @@ a {
 }
 
 .project-boxes {
-  margin: 0 -8px;
   overflow-y: auto;
 }
 .project-boxes.jsGridView {
